syntax = "proto3";

option go_package = "github.com/MemeLabs/go-ppspp/pkg/pb;pb";
option java_package = "gg.strims.ppspp.proto";
option swift_prefix = "PB";

message FundingTestRequest {
  string name = 1;
}

message FundingTestResponse {
  string message = 1;
}

service Funding {
  rpc Test(FundingTestRequest) returns (FundingTestResponse);
}
